--- a/home.css
+++ b/home.css
@@ -46,20 +46,19 @@ nav ul li
 .navbar {
     display: inline-block;
 }
-.mainbody {
-    display: inline-block;
-}
 
 .leftcolumn
 {
-    display: inline-block;
+    float: left;
     width:600px;
+    margin-bottom:50px ;
 
 }
 .rightcolumn 
 {
-    display: inline-block;
     width: 630px;
+    margin-left: 600px;
+    margin-bottom: 50px;
 }
 
 
